--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        version: ["6.15", "7.0", "7.1", "7.2", "latest"]
+        version: ["6.15", "7.0", "7.1", "7.2", "7.3", "7.4", "7.5", "7.6", "7.7", "7.8", "latest"]
     steps:
     - uses: actions/checkout@v1
     - run: ./scripts/build.sh --push
